tests/typing/errors/smtlib_sexprs/empty_sexpr.smt2
(set-logic ALL)

(assert (forall ((x Int)) (! (= x x) :pattern (()))))
